--- a/Sections/QoS.tex
+++ b/Sections/QoS.tex
@@ -270,109 +270,74 @@ per ciascun flusso, insieme a due soglie:
 \end{itemize}
 Questa politica preventiva evita la congestione.
 \subsection{Servizi integrati, RFC 2210}
-L'idea alla base dei servizi integrati è quella di essere in grado di riconoscere i
-singoli flussi, grazie al router, in modo da poter dierenziare l'uso delle risorse
-a seconda del flusso che si viene a presentare. Il Service Level Agreement è
-quindi fatto a livello di singolo flusso, e quindi si può decidere la QoS per ogni
-flusso. Si deve quindi stabilire la QoS fra mittente, ricevente e necessaria per
-ogni nodo intermedio. Questi protocolli descrivono solo la comunicazione che
-le varie parti devono sostenere: la politica locale sarà implementata a livelli
-inferiori localmente dalle singole entità.
-Nonostante il costo, i servizi integrati lavorano proprio al livello applicativo
-(OSI), proprio perché a questo livello le risorse sono note e si possono valutare:
-questo significa che su ogni nodo si lavorerà a livello applicativo, in maniera tale
-da poter individuare fra i possibili cammini il cammino migliore, che divverrà ata
-tivo. Per far ciò si utilizza un protocollo detto Reservation Protocol ; questo proo
-tocollo infatti permette di specificare un cammino attivo in grado di rispettare
-una determinata SLA, senza considerare il traffico corrente, ovvero permette di
-riservare delle risorse in maniera attiva per il servizio. L'idea è che si inviino
-delle informazione dal ricevente al mittente (e viceversa) per poter valutare le
-risorse (ovvero ogni risorsa dovrà provvedere con un opportuno messaggio da
-inoltrare, per indicare la qualità di servizio che può offrire). Si ha quindi una
-propagazione della gestione, per indicare la disponibilità!
+L'idea alla base dei servizi integrati è quella di essere in grado di riconoscere i singoli flussi, grazie al router, 
+in modo da poter differenziare l'uso delle risorse a seconda del flusso che si viene a presentare. Il Service Level
+Agreement è quindi fatto a livello di singolo flusso, e quindi si può decidere la QoS per ogni flusso. Si deve quindi
+stabilire la QoS fra mittente, ricevente e necessaria per ogni nodo intermedio. Questi protocolli descrivono solo la
+comunicazione che le varie parti devono sostenere: la politica locale sarà implementata a livelli inferiori localmente
+dalle singole entità.
+Nonostante il costo, i servizi integrati lavorano proprio al livello applicativo (OSI), proprio perché a questo 
+livello le risorse sono note e si possono valutare: questo significa che su ogni nodo si lavorerà a livello applicativo,
+in maniera tale da poter individuare fra i possibili cammini il cammino migliore, che divverrà attivo. Per far ciò si
+utilizza un protocollo detto \textit{Reservation Protocol}; questo protocollo infatti permette di specificare un 
+cammino attivo in grado di rispettare una determinata SLA, senza considerare il traffico corrente, ovvero permette di
+riservare delle risorse in maniera attiva per il servizio. L'idea è che si inviino delle informazione dal ricevente al
+mittente (e viceversa) per poter valutare le risorse (ovvero ogni risorsa dovrà provvedere con un opportuno messaggio
+da inoltrare, per indicare la qualità di servizio che può offrire). Si ha quindi una propagazione della gestione, per
+indicare la disponibilità!
 Si tratta di un protocollo con soft state, ovvero il ricevente, una volta accordato il servizio e le modalità, dovrà
-preoccuparsi di rinnovare periodicamente
-11 Vi è ICMP che prova ad avvertire l'utente che i pacchetti non son stati ricevuti, ma lavora
-sempre a livello di IP, quindi rischia di essere coinvolto nella congestione!
-35
-la richiesta del servizio concordato. Si ha che quindi il protocollo è definito in
-due passi:
-1. Il cliente invia un messaggio di Resv per valutare la disponibilità
-2. Un servitore che è disponibile risponde con un messaggio di tipo Path
-3. Il cliente conferma il cammino scelto12 rinoltrando con un messaggio di
-tipo Resv (solo con questo messaggio riserva le risorse).
-Un cliente quindi dovrà rinnovare mediante gli stessi messaggi la richiesta di
-servizio, tuttavia sono previsiti anche degli appositi messaggi (tear ) sia da parte
-del cliente che del servitore, per poter interrompere l'erogazione del servizio,
-e permettere una riconfigurazione del servizio. Il protocollo stabilisce che si
-possono richiedere risorse in esclusiva o in condivisione con altri flussi (particolarmente utile per ottimizzare la
-comunicazione). Gli scambi di messaggi
-ovviamente avvengono fra nodi vicini, cercando quindi di limitare il costo senza
-eseguire un broadcast.
-Questo è un sistema conveniente per reti locali e non globali (si ha un alto nue
-mero di messaggi in circolazione): troppi clienti e si avrebbero errori nel riservare
-le risorse perché prenotate prima da altri, e deve essere noto alle applicazioni
-che lavorano che lo scambio di informazioni si basa su tale protocollo. Infatti,
-al degradare delle prestazioni si può giungere ad una condizione di best-effort,
-per cui è necessaria la rinegoziazione. Ogni ricevente deve quindi mantenere
-uno stato per avere idea in che situazione si trova. Sicuramente conviene condividere ove possibile. Si possono anche
-fare spesso delle supposizioni per limitare
-l'overhead (il ricevitore sa a chi mandare per primo le richieste, il servitore sa
-chi potrebbe essere interessato al servizio, . . . ).
-Il problema di RSVP è che è un protocollo con una forte intrusione, perché si
-ha una parte statica molto ben definita, ma che potrebbe essere solo ideale (non
-funzionerebbe bene in presenza di nodi congestionati). Per questo, a supporto
-di questo protocollo per la parte statica, sono stati sviluppati altri protocolli
-per il supporto alla QoS a livello applicativo per la parte dinamica. Sono il Real
-Time Protocol e il Real Time Control Protocol. Sono entrambi protocolli basati
-su UDP, per il singolo flusso, che si preoccupano di portare materialmente i
-frame, incapsulandoli in maniera opportuna. Proprio per questo motivo non
-la garantiscono ma sono solo di supporto! RTP per esempio si preoccupa di
-marcare ed ordinare i singoli frame, in maniera di mandarli in ordine13 , mentre
-RTCP gestisce la connessione astratta.
-RTP non definisce una sincronizzazione verso un tempo assoluto (nel distribuito questo ha dei costi improponibili), ma
-ha
-l'obiettivo di minimizzare il
-jitter. Questi primi protocolli ragionano sul cammino attivo, per poter definire
-correttamente i nodi intermedi. Sono protocolli IETF, con sempre l'obiettivo di
-giungere ad una facile e veloce implementazione.
-12 Il protocollo non spiega come scegliere il cammino (problema implementativo), ma solo
-quali sono i messaggi di comunicazione che i diversi partecipanti devono scambiare
-13 Attenzione: la decisione di come mandare però non è a carico del protocollo, che mette a
-disposizione solo meccanismi ma non politiche
-36
-RTP è sempre accompagnato da RTCP. Il primo è un servizio fortemente
-erogato dal servitore verso il ricevente (da chi sa poco a chi sa molto), mentre
-il secondo serve per fornire al gestore informazioni di gestione, e quindi naviga
+preoccuparsi di rinnovare periodicamente la richiesta del servizio concordato. Si ha che quindi il protocollo è 
+definito in tre passi:
+\begin{enumerate}
+ \item Il cliente invia un messaggio di Resv per valutare la disponibilità 
+ \item Un servitore che è disponibile risponde con un messaggio di tipo Path
+ \item Il cliente conferma il cammino scelto\footnote{Il protocollo non spiega come scegliere il cammino (problema
+ implementativo), ma solo quali sono i messaggi di comunicazione che i diversi partecipanti devono scambiare}
+ rinoltrando con un messaggio di tipo Resv (solo con questo messaggio riserva le risorse).
+\end{enumerate}
+Un cliente quindi dovrà rinnovare mediante gli stessi messaggi la richiesta di servizio, tuttavia sono previsiti anche
+degli appositi messaggi (tear) sia da parte del cliente che del servitore, per poter interrompere l'erogazione del
+servizio, e permettere una riconfigurazione del servizio. Il protocollo stabilisce che si possono richiedere risorse 
+in esclusiva o in condivisione con altri flussi (particolarmente utile per ottimizzare la comunicazione). Gli scambi 
+di messaggi ovviamente avvengono fra nodi vicini, cercando quindi di limitare il costo senza eseguire un broadcast.
+Questo è un sistema conveniente per reti locali e non globali (si ha un alto numero di messaggi in circolazione): 
+troppi clienti e si avrebbero errori nel riservare le risorse perché prenotate prima da altri, e deve essere noto alle
+applicazioni che lavorano che lo scambio di informazioni si basa su tale protocollo. Infatti, al degradare delle
+prestazioni si può giungere ad una condizione di best-effort, per cui è necessaria la rinegoziazione. Ogni ricevente
+deve quindi mantenere uno stato per avere idea in che situazione si trova. Sicuramente conviene condividere ove
+possibile. Si possono anche fare spesso delle supposizioni per limitare l'overhead (il ricevitore sa a chi mandare per
+primo le richieste, il servitore sa chi potrebbe essere interessato al servizio...).
+Il problema di RSVP è che è un protocollo con una forte intrusione, perché si ha una parte statica molto ben definita,
+ma che potrebbe essere solo ideale (non funzionerebbe bene in presenza di nodi congestionati). Per questo, a supporto
+di questo protocollo per la parte statica, sono stati sviluppati altri protocolli per il supporto alla QoS a livello
+applicativo per la parte dinamica. Sono il Real Time Protocol e il Real Time Control Protocol. Sono entrambi protocolli
+basati su UDP, per il singolo flusso, che si preoccupano di portare materialmente i frame, incapsulandoli in maniera
+opportuna. Proprio per questo motivo non la garantiscono ma sono solo di supporto! RTP per esempio si preoccupa di
+marcare ed ordinare i singoli frame, in maniera di mandarli in ordine\footnote{Attenzione: la decisione di come mandare
+però non è a carico del protocollo, che mette a disposizione solo meccanismi ma non politiche}, mentre RTCP gestisce 
+la connessione astratta. RTP non definisce una sincronizzazione verso un tempo assoluto (nel distribuito questo ha dei
+costi improponibili), ma ha l'obiettivo di minimizzare il jitter. Questi primi protocolli ragionano sul cammino attivo,
+per poter definire correttamente i nodi intermedi. Sono protocolli IETF, con sempre l'obiettivo di giungere ad una
+facile e veloce implementazione.
+RTP è sempre accompagnato da RTCP. Il primo è un servizio fortemente erogato dal servitore verso il ricevente (da chi 
+sa poco a chi sa molto), mentre il secondo serve per fornire al gestore informazioni di gestione, e quindi naviga
 in entrambe le direzioni. Tuttavia, si devono specificare in maniera precisa entrambi perché utilizzano le stesse
-risorse,
-e potrebbero aumentare l'intrusione;
-si stabilisce per esempio quale è la banda che RTCP può sfruttare. RTP in
-particolare consente ai singoli intermediari di intervenire sui singoli messaggi,
-per poter comunque garantire il raggiungimento della QoS stabilita. RTCP permette, in particolare con il receiver e il
-sender report, di poter stabilire lo stato
-del cammino, per poter quindi far eseguire eventuali operazioni (tipo recovery
-di un nodo); tuttavia, si deve sempre considerare che tutto ciò è particolarmente
-oe
-costoso.
-Questi protocolli sono anche veicoli di informazioni applicative, cioè si pose
-sono specificare nei datagrammi informazioni per le singole applicazioni: sono
-protocolli hop-to-hop, che lavorano su tutti i nodi, per cui bisogna garantire che
-i nodi intemedi non modichino le informazioni a livello applicativo. Le possono
-vedere, ma non modicare.
-Questi protocolli purtroppo non sono molto scalabili, e possono essere usati
-solo in reti molto limitate. Il lettore RealPlayer per esempio sfrutta un altro
-protocollo detto Real Time Streaming Protocol, in cui non si definisce un cammino attivo, ma una volta ottenute le
-specifiche dello stream, si utilizza UDP
-o TCP e un sistema di buffering per poter trasferire il flusso dalla sorgente al
-player. Infatti, inizialmente si parte mediante TCP che riempe il buer, ma se
-un frame non arriva si sfrutta UDP proprio perché non garantisce che i messaggi
-`
-arrivino in ordine! E un modello push, in cui le informazioni arrivano dal server. Questo è un protocollo dal costo
-minimo, proprio perché non riserva nulla:
-`
-lavora solo sugli end-point. E sempre possibile comunque tornare a RSVP nel
-caso non fosse sufficiente.
+risorse, e potrebbero aumentare l'intrusione; si stabilisce per esempio qual è la banda che RTCP può sfruttare. 
+RTP in particolare consente ai singoli intermediari di intervenire sui singoli messaggi, per poter comunque garantire 
+il raggiungimento della QoS stabilita. RTCP permette, in particolare con il receiver e il sender report, di poter
+stabilire lo stato del cammino, per poter quindi far eseguire eventuali operazioni (tipo recovery di un nodo); 
+tuttavia, si deve sempre considerare che tutto ciò è particolarmente costoso.
+Questi protocolli sono anche veicoli di informazioni applicative, cioè si possono specificare nei datagrammi
+informazioni per le singole applicazioni: sono protocolli hop-to-hop, che lavorano su tutti i nodi, per cui bisogna
+garantire che i nodi intemedi non modifichino le informazioni a livello applicativo. Le possono vedere, ma non
+modificare.
+Questi protocolli purtroppo non sono molto scalabili, e possono essere usati solo in reti molto limitate. Il lettore
+RealPlayer per esempio sfrutta un altro protocollo detto Real Time Streaming Protocol, in cui non si definisce un
+cammino attivo, ma una volta ottenute le specifiche dello stream, si utilizza UDP o TCP e un sistema di buffering per
+poter trasferire il flusso dalla sorgente al player. Infatti, inizialmente si parte mediante TCP che riempe il buffer,
+ma se un frame non arriva si sfrutta UDP proprio perché non garantisce che i messaggi arrivino in ordine! E un modello
+push, in cui le informazioni arrivano dal server. Questo è un protocollo dal costo minimo, proprio perché non riserva
+nulla: lavora solo sugli end-point. E sempre possibile comunque tornare a RSVP nel caso non fosse sufficiente.
 \subsection{Servizi differenziati, RFC 2474}
 L'approccio a servizi differenziati consiste nel cercare di fornire QoS non a livello
 applicativo, ma a livello di rete. Facendo ciò, in realtà, si ha che si sono definiti
