--- a/Sections/Middleware.tex
+++ b/Sections/Middleware.tex
@@ -36,87 +36,69 @@ In generale si possono dividere in 4 livelli le tipologie possibili di un serviz
  dell'architettura! Un esempio è la JVM.
  \item \textit{Distribution middleware}: altro aspetto fondamentale, è quella parte di un middleware che permette di
  integrare le risorse distribuite, mediante un apposito sistema di comunicazione. Si tratta anche questo di un 
- qualcosa che deve essere opportunatamente distribuito su tutti i nodi. Esempi: RMI23 , JMS, CORBA. E quindi questo
- il livello che configura e gestisce le risorse distribuite. Introduce quindi API per la comunicazione e meccanismi
- di supporto alla comunicazione (per esempio, un sistema di nomi).
+ qualcosa che deve essere opportunatamente distribuito su tutti i nodi. Esempi: RMI\footnote{Limite di RMI rispetto 
+ ad RPC: lega C/S ad una tecnologia, non è eterogeneo!}, JMS, CORBA. È quindi questo il livello che configura e
+ gestisce le risorse distribuite. Introduce quindi API per la comunicazione e meccanismi  di supporto alla 
+ comunicazione (per esempio, un sistema di nomi).
  \item \textit{Common middleware services}: questo invece è un aspetto che è presente in middleware maturi, per cui si
  possono fornire dei componenti distribuibili, utili per sviluppare in un'ottica a componenti. Spesso quindi si realizza
  una propria visione, ovvero il sistema si basa su un'architettura comune e un modello di supporto. Sono quindi i
  servizi trasversali, che spesso in realtà rappresentano il punto di forza di un mw: è in base alla loro qualità
  che si decide se sceglierlo o meno.
- \item Domain middleware services: altro aspetto presente in middleware maturi, si propongono anche servizi 
+ \item \textit{Domain middleware services}: altro aspetto presente in middleware maturi, si propongono anche servizi 
  applicativi già realizzati, specifici per una determinata comunità. Infatti, spesso il successo di un middleware è
  dovuto dalla comunità di utenti che lo utilizzano, e dalle varie sottocomunità che si vengono a formare, che possono
  addirittura guidarne lo sviluppo! Basta pensare che CORBA è uno standard proposto da un consorzio d'aziende, l'OMG.
 \end{itemize}
 
 \subsection{Classificazione dei mw}
-I middleware si possono categorizzare in diversi modi, tuttavia la maggior parte
-dell'installato consiste in primis dai DOC, Distributed Object Computing (tipo
-CORBA, orientati all'approccio ad oggetti), e quindi dai MOM, Message Oriented MW. In realtà però, il 'mw' più grande
-esistente forse è il Web: non ha
-tutte le caratteristiche di un Mw (esempio, QoS, replicazione, . . . ), ma è un
-esempio di un sistema che permette la comunicazione fra diversi sistemi eterogenei, in generale mediante la
-pubblicazione di informazioni su un server e il loro
-reperimento da parte di un client. Il grosso problema del Web infatti è che nato
-per essere usato a livello di presentazione, e quindi di suo non presentava un
-sistema per lo scambio di messaggi : le sue evoluzioni hanno introdotto sistemi
-23 Limite
-di RMI rispetto ad RPC: lega C/S ad una tecnologia, non è eterogeneo!
-52
-di comunicazione ed interazione, ma sempre in maniera molto limitata, dovendo
-basarsi solo sull'approccio C/S!
-Lavorando solo con RPC, che genere di MW si possono ottenere? Il problema
-di RPC è che comunque limita fortemente (per esempio, si hanno operazioni
-strettamente sincrone bloccanti, quando magari altri modi potrebbero essere
-desiderati) e in generale realizza un binding statico e non dinamico. Permette
-già di fornire dei livelli di trasparenza, e un sottolinguaggio per poter definire
-fra C e S i servizi, ma resta che il sistema che si otterrà sarà poco scalabile,
-molto rigido (tutto deciso in maniera statica, senza poter quindi intervenire per
-ottimizzare il sistema!)
+I middleware si possono categorizzare in diversi modi, tuttavia la maggior parte dell'installato consiste in primis 
+dai DOC, Distributed Object Computing (tipo CORBA, orientati all'approccio ad oggetti), e quindi dai MOM, Message
+Oriented MW. In realtà però, il 'mw' più grande esistente forse è il Web: non ha tutte le caratteristiche di un Mw
+(esempio, QoS, replicazione...), ma è un esempio di un sistema che permette la comunicazione fra diversi sistemi
+eterogenei, in generale mediante la pubblicazione di informazioni su un server e il loro reperimento da parte di un
+client. Il grosso problema del Web infatti è che è nato per essere usato a livello di presentazione, e quindi di suo 
+non presentava un \textit{sistema per lo scambio di messaggi}: le sue evoluzioni hanno introdotto sistemi di
+comunicazione ed interazione, ma sempre in maniera molto limitata, dovendo basarsi solo sull'approccio C/S!
+Lavorando solo con RPC, che genere di MW si possono ottenere? Il problema di RPC è che comunque limita fortemente 
+(per esempio, si hanno operazioni strettamente sincrone bloccanti, quando magari altri modi potrebbero essere
+desiderati) e in generale realizza un binding statico e non dinamico. Permette già di fornire dei livelli di
+trasparenza, e un sottolinguaggio per poter definire fra C e S i servizi, ma resta che il sistema che si otterrà sarà
+poco scalabile, molto rigido (tutto deciso in maniera statica, senza poter quindi intervenire per ottimizzare il
+sistema!).
 I diversi possibili modelli di mw che si possono trovare sono:
-$\bullet$ Distributed Transaction Processing: questi mw nascono per cercare di
-ottimizzare l'accesso ai DB. L'ipotesi è che si abbiano delle operazioni
-comandate da un C con poche risorse, e si vuole quindi fornire un supporto
-per facilitare la realizzazione di operazioni ACID (Atomic, Consistent,
-Isolation, Durable), necessarie per avere QoS in sistemi distribuiti basati
-su DB.
-$\bullet$ DB mw : l'obiettivo di questi mw invece è quello di migliorare/fornire un
-supporto per effettuare ricerche su db distribuiti. Si ha quindi una logica
-vicina al data-mining. Si vuole quindi superare l'eterogeneità dei diversi
-DB, sfruttando sistemi standard come ODBC, per leggere sui DB.
-$\bullet$ MOM : l'obiettivo di questi mw è l'estrema indipendenza fra i vari attori ! I
-diversi sottoinsiemi infatti comunicano a scambio di messaggi, in maniera
-sincrona/asincrona, e fortemente disaccoppiata: si tratta di un sistema di
-comunicazione a più basso livello del C/S. Si possono realizzare messaggi
-tipati o meno, e risulta essere facile la realizzazione di multi/broadcast.
-A livello di implementazione si può citare JMS, che venendo dopo gli
-altri sistemi, sviluppa un sistema basato su interfacce per poter definire i
-messaggi ben formati.
-$\bullet$ DOC : sono i mw in assoluto più diffusi. Si preoccupano di definire un'inu
-terazione molto precisa e regolata, astraendo le risorse ad essere oggetti.
-Si incapsula il C/S in un universo basato sugli oggetti. Tuttavia, non vi
-è mai in generale una comunicazione diretta, per via della presenza di un
-broker : questo fornisce delle interfacce sia al C che al S, e quindi un supporto alla mediazione fra i due attori.
-Questo sistemafacilita l'integrazione
-di sistemi, e permette di realizzare operazioni che si possono eseguire in
-maniera automatica.
-Proprio perché si basa sul modello ad oggetti, i mw di questa tipologia
-sono molto più variabili, e possono essere estesi molto più facilmente dei
-MOM. Spesso si hanno mw di questo tipo OpenSource, in grado di creare
-una comunità molto vasta ed attiva.
-53
-$\bullet$ Addattativi e Riessivi: un mw addattativo è un mw che varia i servizi
-nel tempo, a seconda della situazione, quindi a caldo: deve essere quindi
-di fornire nuovi modi di lavorare.
-Il fatto che sia riflessivo indica invece che un componente del mw deve essere in grado di esporre quello che fa. Un
-sistema riflessivo è maggiormente
-costoso di un sistema statico, ma è un sistema che viene valutato molto
-perché permette, in maniera dinamica, di definire via real-time come il
-componente funzioni!
-L'obiettivo è quindi fornire un sistema per la visibilità dei livelli sottostanti
-e permettere di adattatare e sistemare in base alle esigenze.
-Esistono poi diversi mw nati proprio per risolvere dei problemi specifici (mobilità, reti ad-hoc, . . . ).
+\begin{itemize}
+ \item \textit{Distributed Transaction Processing}: questi mw nascono per cercare di ottimizzare l'accesso ai DB.
+ L'ipotesi è che si abbiano delle operazioni comandate da un C con poche risorse, e si vuole quindi fornire un supporto
+ per facilitare la realizzazione di operazioni ACID (Atomic, Consistent, Isolation, Durable), necessarie per avere 
+ QoS in sistemi distribuiti basati su DB.
+ \item \textit{DB mw}: l'obiettivo di questi mw invece è quello di migliorare/fornire un supporto per effettuare
+ ricerche su db distribuiti. Si ha quindi una logica vicina al data-mining. Si vuole quindi superare l'eterogeneità 
+ dei diversi DB, sfruttando sistemi standard come ODBC, per leggere sui DB.
+ \item \textit{MOM}: l'obiettivo di questi mw è l'estrema indipendenza fra i vari attori ! I diversi sottoinsiemi
+ infatti comunicano a scambio di messaggi, in maniera sincrona/asincrona, e fortemente disaccoppiata: si tratta di un
+ sistema di comunicazione a più basso livello del C/S. Si possono realizzare messaggi tipati o meno, e risulta essere
+ facile la realizzazione di multi/broadcast. 
+ A livello di implementazione si può citare JMS, che venendo dopo gli altri sistemi, sviluppa un sistema basato su
+ interfacce per poter definire i messaggi ben formati.
+ \item \textit{DOC}: sono i mw in assoluto più diffusi. Si preoccupano di definire un'interazione molto precisa e
+ regolata, astraendo le risorse ad essere oggetti. 
+ Si incapsula il C/S in un universo basato sugli oggetti. Tuttavia, non vi è mai in generale una comunicazione diretta,
+ per via della \textit{presenza di un broker}: questo fornisce delle interfacce sia al C che al S, e quindi un supporto
+ alla mediazione fra i due attori. Questo sistema facilita l'integrazione di sistemi, e permette di realizzare
+ operazioni che si possono eseguire in maniera automatica.
+ Proprio perché si basa sul modello ad oggetti, i mw di questa tipologia sono molto più variabili, e possono essere
+ estesi molto più facilmente dei MOM. Spesso si hanno mw di questo tipo OpenSource, in grado di creare una comunità
+ molto vasta ed attiva.
+ \item \textit{Addattativi e Riessivi}: un mw addattativo è un mw che varia i servizi nel tempo, a seconda della
+ situazione, quindi a caldo: deve essere quindi in grado di fornire nuovi modi di lavorare.
+ Il fatto che sia riflessivo indica invece che un componente del mw deve essere in grado di esporre quello che fa. Un
+ sistema riflessivo è maggiormente costoso di un sistema statico, ma è un sistema che viene valutato molto
+ perché permette, in maniera dinamica, di definire via real-time come il componente funzioni!
+ L'obiettivo è quindi fornire un sistema per la visibilità dei livelli sottostanti e permettere di adattatare e
+ sistemare in base alle esigenze.
+\end{itemize}
+Esistono poi diversi mw nati proprio per risolvere dei problemi specifici (mobilità, reti ad-hoc...).
 \subsection{TINA-C}
 TINA-C rappresenta la proposta di un mw per le TLC. Si vuole realizzare un
 sistema dove siano previsti più provider, in grado quindi di lavorare su una
